--- a/town-container-android/project.properties
+++ b/town-container-android/project.properties
@@ -9,4 +9,4 @@
 
 # Project target.
 target=Google Inc.:Google APIs:8
-android.library.reference.1=../../facebook-facebook-android-sdk-1e03bf9/facebook
+android.library.reference.1=../facebook-facebook-android-sdk-1e03bf9/facebook
