Changed key store password in ant.properties

--- a/town-container-android/ant.properties
+++ b/town-container-android/ant.properties
@@ -2,5 +2,5 @@
 #keytool -genkey -v -keystore ~/.android/release.keystore -alias releasekey -keyalg RSA -validity 10000
 key.store=${user.home}/.android/release.keystore
 key.alias=releasekey
-key.store.password=Townw1zard
-key.alias.password=Townw1zard
+key.store.password=bama97
+key.alias.password=bama97
