--- a/town-container-android/ant.properties
+++ b/town-container-android/ant.properties
@@ -1,6 +1,6 @@
 #To sign application apk file during ant release, make sure to generate the keystore file with command:
 #keytool -genkey -v -keystore ~/.android/release.keystore -alias releasekey -keyalg RSA -validity 10000
-key.store=${user.home}/.android/release.keystore
-key.alias=releasekey
+key.store=${user.home}/.android/TownWizard
+key.alias=townwizard
 key.store.password=bama97
 key.alias.password=bama97
