Bag fix.  Enable proguard

--- a/town-container-android/project.properties
+++ b/town-container-android/project.properties
@@ -11,3 +11,4 @@
 # Project target.
 target=Google Inc.:Google APIs:8
 android.library.reference.1=../facebook-facebook-android-sdk-1e03bf9/facebook
+proguard.config=proguard-project.txt
