--- a/town-container-android/AndroidManifest.xml
+++ b/town-container-android/AndroidManifest.xml
@@ -69,6 +69,12 @@
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
+        <activity
+            android:name="com.townwizard.android.DefaultJsonActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar" >
+        </activity>        
     </application>
 
 </manifest>
