Rolled back the change in project.properties

--- a/town-container-android/project.properties
+++ b/town-container-android/project.properties
@@ -11,4 +11,4 @@
 # Project target.
 target=Google Inc.:Google APIs:8
 proguard.config=proguard-project.txt
-android.library.reference.1=../../townwizard-android/facebook-facebook-android-sdk-1e03bf9/facebook
+android.library.reference.1=../townwizard-android/facebook-facebook-android-sdk-1e03bf9/facebook
