--- a/town-container-android/proguard.cfg
+++ b/town-container-android/proguard.cfg
@@ -12,9 +12,15 @@
 
 # Add any project specific keep options here:
 
+
 # If your project uses WebView with JS, uncomment the following
 # and specify the fully qualified class name to the JavaScript interface
 # class:
-#-keepclassmembers class fqcn.of.javascript.interface.for.webview {
-#   public *;
-#}
+# -keepclassmembers class fqcn.of.javascript.interface.for.webview {
+#    public *;
+# }
+
+-keepclassmembers enum * {
+    public static **[] values();
+    public static ** valueOf(java.lang.String);
+}
