--- a/town-container-android/AndroidManifest.xml
+++ b/town-container-android/AndroidManifest.xml
@@ -67,7 +67,15 @@
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
-        </activity>        
+        </activity>
+        <activity 
+            android:name="com.facebook.LoginActivity"
+            android:label="@string/app_name" 
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+        </activity>  
+        
+        <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/applicationId" />
+        
     </application>
 
 </manifest>
