--- a/town-container-android/AndroidManifest.xml
+++ b/town-container-android/AndroidManifest.xml
@@ -13,28 +13,29 @@
     <application
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
+        
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name="com.townwizard.android.TownWizardActivity"
+            android:name=".TownWizardActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.CategoriesActivity"
+            android:name=".CategoriesActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.WebActivity"
+            android:name=".WebActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.SplashScreen"
+            android:name=".SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
@@ -44,26 +45,26 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.townwizard.android.FacebookPlacesActivity"
+            android:name=".FacebookPlacesActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.MapViewActivity"
+            android:name=".MapViewActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.UploadPhotoActivity"
+            android:name=".UploadPhotoActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
         </activity>
         <activity
-            android:name="com.townwizard.android.DefaultJsonActivity"
+            android:name=".DefaultJsonActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.NoTitleBar" >
