--- a/town-container-android/project.properties
+++ b/town-container-android/project.properties
@@ -10,5 +10,6 @@
 
 # Project target.
 target=Google Inc.:Google APIs:8
-proguard.config=proguard.cfg
+#proguard.config=proguard.cfg
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard.cfg
 android.library.reference.1=../facebook-android-sdk-3.0/facebook
