--- a/town-container-android/project.properties
+++ b/town-container-android/project.properties
@@ -11,4 +11,4 @@
 # Project target.
 target=Google Inc.:Google APIs:8
 proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard.cfg
-android.library.reference.1=../facebook-android-sdk-3.0/facebook
+android.library.reference.1=../facebook-android-sdk/facebook
