--- a/town-container-android/AndroidManifest.xml
+++ b/town-container-android/AndroidManifest.xml
@@ -18,24 +18,6 @@
         <uses-library android:name="com.google.android.maps" />
 
         <activity
-            android:name=".TownWizardActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
-        </activity>
-        <activity
-            android:name=".CategoriesActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
-        </activity>
-        <activity
-            android:name=".WebActivity"
-            android:label="@string/app_name"
-            android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
-        </activity>
-        <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -46,34 +28,60 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".TownWizardActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
+        </activity>
+        <activity
+            android:name=".CategoriesActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
+        </activity>
+        <activity
+            android:name=".WebActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true">
+        </activity>
+        <activity
             android:name=".FacebookPlacesActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
         </activity>
         <activity
             android:name=".FacebookCheckinActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.NoTitleBar" >
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
         </activity>
         <activity
             android:name=".MapViewActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
         </activity>
         <activity
             android:name=".UploadPhotoActivity"
             android:configChanges="keyboardHidden|orientation"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            android:theme="@android:style/Theme.Black.NoTitleBar" >
+            android:theme="@android:style/Theme.Black.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
         </activity>
         <activity 
             android:name="com.facebook.LoginActivity"
             android:label="@string/app_name" 
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" >
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"
+            android:finishOnCloseSystemDialogs="true" >
         </activity>  
         
         <meta-data android:name="com.facebook.sdk.ApplicationId" android:value="@string/applicationId" />
