Fixed production build problems with facebook classes not handled properly by proguard

--- a/town-container-android/proguard.cfg
+++ b/town-container-android/proguard.cfg
@@ -32,3 +32,9 @@
     java.lang.Object writeReplace();
     java.lang.Object readResolve();
 }
+
+-keepattributes Signature
+
+-keep class com.facebook.** {
+   *;
+}
