--- a/town-container-android/AndroidManifest.xml
+++ b/town-container-android/AndroidManifest.xml
@@ -8,6 +8,7 @@
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
@@ -15,7 +16,7 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name" >
         
-        <uses-library android:name="com.google.android.maps" />
+        <uses-library android:name="com.google.android.maps" />        
 
         <activity
             android:name=".SplashScreen"
