--- a/town-container-android/proguard.cfg
+++ b/town-container-android/proguard.cfg
@@ -35,6 +35,9 @@
 
 -keepattributes Signature
 
--keep class com.facebook.** {
-   *;
-}
+-keep class com.facebook.** {*;}
+
+-keep class com.google.android.gms.analytics.**
+-keep class com.google.analytics.tracking.**
+-dontwarn com.google.android.gms.analytics.**
+-dontwarn com.google.analytics.tracking.**
